# lib/paideia-api-spec/openapi.yaml
@@ -723,6 +723,10 @@ components:
           type: string
         subscriptionStatus:
           type: string
+        subscriptionTier:
+          type: string
+        isAdmin:
+          type: boolean
         subscriptionCurrentPeriodEnd:
           type: ["string", "null"]
         createdAt:
